--- a/.github/workflows/quranbot.yml
+++ b/.github/workflows/quranbot.yml
@@ -2,7 +2,7 @@ name: Quran Facebook Bot
 
 on:
   schedule:
-    - cron: '*/5 * * * *'  # every hour
+    - cron: '0 */8 * * *'  # Every 8 hours
   workflow_dispatch:
 
 jobs:
